Fix buttons alignement.

--- a/assets/sass/components/ads/_googlesitekit-ads-woocommerce-redirect-modal.scss
+++ b/assets/sass/components/ads/_googlesitekit-ads-woocommerce-redirect-modal.scss
@@ -72,7 +72,9 @@
 			button {
 
 				&:last-child {
-					margin-top: 5px;
+					@media (max-width: $bp-mobileOnly) {
+						margin-top: 5px;
+					}
 				}
 
 				.MuiCircularProgress-colorPrimary {
